<resources>
    <string name="app_name">COURSE CONSULTATION APP</string>
    <string name="hint_email_address">Email Address</string>
    <string name="description_app_logo">app_logo</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_sign_in">Sign In</string>
    <string name="txt_view_sign_up_here">Sign up here!</string>
    <string name="txt_view_no_account_yet">No account yet?</string>
    <string name="txt_view_already_have_an_account">Already have an account?</string>
    <string name="txt_view_sign_in_here">Sign in here!</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
</resources>